--- a/EXERCICIOS/aula06/ex003.html
+++ b/EXERCICIOS/aula06/ex003.html
@@ -21,9 +21,10 @@
     <h1>Ola, Mundo!</h1>
     <p>Ja me livrei da maldiçao</p>
     <script>
-        window.alert('Minha primeira mensagem')
-        window.confirm('Esta gostando de javascript')
-        window.prompt('Qual e seu nome')
+       var n1 = Number(window.prompt('Digite um numero: '))
+       var n2 = Number(window.prompt('Digite outro numero: '))
+       var s = n1 + n2
+    window.alert (`A soma entre ${n1} e ${n2} e igual a ${s}`)
     </script>
 </body>
 </html>
